# SISR

./: .gitignore  .gitmodules  .golangci.yml  .markdownlint.json  Cargo.toml  README.md  build_appimage.sh  go.mod  go.sum  justfile  mkdocs.yml  openapi.yaml  tools.go  versioninfo.json
.github/workflows/: PR_check.yml  build_base.yml  docs-deploy.yml  release.yml  snapshots.yml
CEF_Payloads/: eslint.config.js  package.json  tsconfig.json  vite.config.ts
CEF_Payloads/src/: index.d.ts
CEF_Payloads/src/payloads/: cleanup.ts  overlay_callback.ts
UI/: .env.example  package-lock.json  ui.go
UI/src/routes/: +page.svelte  +page.ts
api/: api.go  statusWriter.go
api/ctx/: ctx.go
api/handler/: env.go  params.go  quit.go  steamStatus.go
api/handler/config/: config.go
api/handler/devices/: devices.go
api/handler/initiallaunch/: initiallaunch.go
api/handler/quit/: quit.go
api/handler/restart/: restart.go
api/handler/steam/: enable_cef_remote_debug.go  force_config.go  register.go  restart.go  status.go
api/handler/ui/: ui.go
api/handler/version/: update.go
api/handler/viiper/: viiper.go
assets/: icon.go
cef_injectee/: package-lock.json
cefpayloads/: .gitignore  cleanup.go  create_marker_shortcut.go  open_configurator.go  overlay_callback.go  package-lock.json  tsconfig.app.json  vite.config.ts
cefpayloads/src/: index.d.ts
cefpayloads/src/payloads/: create_marker_shortcut.ts  open_configurator.ts  overlay_callback.ts
cli/: cli.go
cli/cmd/: sisr.go
cli/cmd/sisr/: api_server.go  env.go  eventhandlers.go  hints.go  registereventhandlers.go  registerkbmhandlers.go  sdl_hint_env.go  sisr.go  unhook.go  window.go
cmd/: sisr-poc.go  sisr.go  sisrctx.go
cmd/sisr/: main.go  meta.go  sisr.go  startup.go  startup_windows.go
config/: config.go  platform.go  platform_windows.go
docs/: index.md
docs/config/: cli.md  config.md
docs/dev/: building.md
docs/getting-started/: installation.md  introduction.md
docs/guides/: ds4_emulation.md  multi_configs.md  networked.md  no_steam.md  overview.md  usage.md
docs/misc/: faq.md  troubleshooting.md
event/: register.go  router.go
event/handler/: const.go  deviceCreateHelper.go  env.go  gamepadAdded.go  gamepadRemoved.go  gamepadUpdated.go  handler.go  helper.go  quit.go  resize.go  toggleui_chord.go  windowresize.go
event/handler/gamepadUpdated/: gamepadUpdates.go  mapstate_dualshock4.go  mapstate_xbox360.go
event/handler/gamepadupdated/: gamepadupdated.go  mapstate_dualshock4.go  mapstate_xbox360.go  math.go
event/handler/kbmforward/: kbmforward.go  map_keyboard_state.go
event/handler/sensorupdated/: sensorupdated.go  update_sensor_dualshock4.go
helper/: data_dir.go  executable.go  exedir.go  loaddll.go  loadso.go  openurl.go
input/: device.go  deviceHandler.go  deviceStore.go  device_store.go  errors.go  viiperDevice.go  viiperbridge.go
input/steaminputbindings/: bindingenforcer.go  errors.go
input/viiperdevice/: feedbackdualshock4.go  feedbackkeyboard.go  feedbackunknown.go  feedbackxbox360.go  kbm_helpers.go  mapstate_dualshock4.go  mapstate_xbox360.go  updatexbox360state.go  viiperDevice.go
logging/: logging.go  middleware.go
meta/: meta.go
middleware/: middleware.go  unregisteredRoute.go
polyhook/: cgo_flags_debug.go  cgo_flags_release.go  polyhook.cpp  polyhook.go  polyhook.h
scripts/: install.ps1  install.sh
sdl/: cgo_flags_debug.go  cgo_flags_release.go  error.go  event.go  exports.go  gamepad.go  hints.go  joystick.go  keycode.go  mouse_relative_bridge.c  properties.go  renderer.go  sdl.go  window.go  window_native_linux.go  window_native_windows.go  window_properties.go  window_properties_linux.go  window_properties_windows.go
sdl/extras/: cursor_hittest_linux.c  cursor_hittest_linux.go  cursor_hittest_linux.h  cursor_hittest_windows.go
src/: config.rs  lib.rs  main.rs
src/app/: core.rs  mod.rs  runner.rs  tray.rs  updater.rs
src/app/api/: mod.rs
src/app/assets/: mod.rs
src/app/gui/: dialogs.rs
src/app/hid_hooks/: hid_check.rs  mod.rs  rehook.rs
src/app/input/: device.rs  device_info.rs  mod.rs  sdl_hints.rs  sdl_loop.rs  viiper_bridge.rs
src/app/steam/: binding_enforcer.rs  mod.rs  util.rs
src/app/tray/: event.rs  mod.rs
src/app/window/: event.rs  gfx.rs  input_forward.rs  mod.rs  (+2 more)
steam/: cef_debug_port_nonwindows.go  cef_debug_port_windows.go  errors.go  markerenv.go  overlayloader.go  shortcutspath.go  steam.go  steam_cef.go  steam_running.go  steam_running_linux.go  steam_running_windows.go  steamlaunch.go  steampath.go  steampath_windows.go  userid.go  userid_windows.go
steam/steamcef/: cef_inject.go  errors.go  execute_payload.go
steam/vdf/: binary.go
tray/: tray.go
update/: checker.go
util/: util.go  util_windows.go
webview/: webview.go  webview_linux.c  webview_linux.go  webview_linux.h  webview_windows.go
windows/: console_windows.go  dwm_passive_unix.go  dwm_passive_windows.go  window_style_windows.go
windows/hooks/: errors.go  hooks.go  hooks_unix.go  hooks_windows.go
(+76 files in other folders)
