[package]
name = "SISR"
version = "0.0.1"
edition = "2024"

[dependencies]
sdl3-sys = { version = "0.6.0+SDL-3.4.0", features = [
    "build-from-source",
    "debug-impls",
] }
clap = { version = "4.5.54", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22" }
chrono = "0.4.43"
winit = "0.30.12"
wgpu = "27.0.1"
pollster = "0.4.0"
wgpu-types = "27.0.1"
egui = { version = "0.33.2", features = ["persistence"] }
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
egui_demo_lib = "0.33.2"
sdl3 = { version = "0.17.3", features = ["hidapi"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
tray-icon = "0.21.2"
image = "0.25.9"
viiper-client = { version = "0.4.0", features = ["async"] }
#viiper-client = { path = "../VIIPER/clients/rust", features = ["async"] }
anyhow = "1.0.100"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
ron = "0.12"
directories = "6.0"
reqwest = "0.12.24"
sysinfo = { version = "0.37.2", features = ["windows", "serde"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
serde_json = "1.0.149"
new-vdf-parser = "0.2.0"
libloading = "0.9.0"
dashmap = "6.1.0"

[target.'cfg(all(target_arch = "x86_64"))'.dependencies]
retour = "0.4.0-alpha.4"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
] }
enable-ansi-support = "0.3.1"
winreg = "0.55.0"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.21"
gtk = "0.18"
x11rb = { version = "0.13", features = ["all-extensions"] }
wayland-client = "0.31"

[build-dependencies]
winres = "0.1"
toml = "0.9.8"
ureq = { version = "3.1.4", features = ["json"] }
serde_json = "1.0.145"

[lib]
name = "sisr"

[package.metadata.viiper]
viiper-version = "0.4.0"
allow_dev = true
fetch_prelease = false
