[package]
name = "SISR"
version = "0.0.1"
edition = "2024"

[dependencies]
sdl3-sys = { version = "0.6.3+SDL-3.4.4", features = [
    "build-from-source",
    "debug-impls",
] }
# sdl3-sys = { version = "0.5.11+SDL3-3.2.28", features = [
#     "build-from-source",
#     "debug-impls",
# ] }
sdl3 = { version = "0.18.0", features = ["hidapi"] }
# sdl3 = { version = "0.16.2", features = ["hidapi"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
figment = { version = "0.10", features = ["json", "toml", "yaml"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22" }
chrono = "0.4.43"
winit = "0.30.12"
wgpu = "29.0.1"
pollster = "0.4.0"
wgpu-types = "29.0.1"
wry = { package = "lb-wry", version = "0.53.3" }
ctrlc = { version = "3.5.1", features = ["termination"] }
tray-icon = "0.23.0"
image = "0.25.9"
viiper-client = { version = "0.6.0", features = ["async"] }
#viiper-client = { path = "../VIIPER/clients/rust", features = ["async"] }
anyhow = "1.0.100"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "sync"] }
ron = "0.12.1"
directories = "6.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
sysinfo = { version = "0.38.4", features = ["windows", "serde"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.31"
serde_json = "1.0.149"
new-vdf-parser = "0.2.0"
libloading = "0.9.0"
dashmap = "6.1.0"
axum = "0.8.9"
utoipa = { version = "5.4.0", features = ["yaml"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
rust-embed = { version = "8.11.0", features = ["axum-ex"] }
mime_guess = "2.0.5"
problem_details = { version = "0.9.0", features = ["axum", "utoipa"] }

[target.'cfg(all(target_arch = "x86_64"))'.dependencies]
retour = "0.4.0-alpha.4"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
] }
enable-ansi-support = "0.3.1"
winreg = "0.56.0"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.22.7"
gtk = "0.18"
x11rb = { version = "0.13", features = ["all-extensions"] }
wayland-client = "0.31"

[build-dependencies]
winres = "0.1"
toml = "1.1.2+spec-1.1.0"
ureq = { version = "3.1.4", features = ["json"] }
serde_json = "1.0.145"

[lib]
name = "sisr"

[package.metadata.viiper]
viiper-version = "0.6.0"
allow_dev = true
fetch_prelease = false
